<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Robot Control</string>
    <string name="conn">Connect</string>
    <string name="dconn">Disconnect</string>
    <string name="conn_p2p">Connect wifi direct</string>
    <string name="dconn_p2p">Disconnect wifi direct</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="stop">Stop</string>
</resources>
